--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
 Date: ????
+  Features:
+    - Adds sprites class to tint a sprite or an animation with possible layers.
