--- a/changelog.txt
+++ b/changelog.txt
@@ -2,4 +2,5 @@
 Version: 0.1.0
 Date: ????
   Features:
-    - Adds sprites class to tint a sprite or an animation with possible layers.
+    - Adds a sprites helper function to tint a sprite or an animation with possible layers.
+    - Adds a sprites helper function to replace sprite or animation filenames.
