--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.0
-Date: ????
+Date: 2025-09-19
   Features:
     - Adds a sprites helper function to tint a sprite or an animation with possible layers.
     - Adds a sprites helper function to replace sprite or animation filenames.
