--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
 ---------------------------------------------------------------------------------------------------
+Version: 0.2.0
+Date: ????
+---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2025-09-19
   Changes:
