--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ Version: 0.2.0
 Date: ????
   Features:
     - Exposes a technology manipulation object to create, load, modify, and commit technology prototypes.
+    - Adds functions to manipulate technology prerequisites.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2025-09-19
