--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,7 @@ Date: ????
   Features:
     - Exposes a technology manipulation object to create, load, modify, and commit technology prototypes.
     - Adds functions to manipulate technology prerequisites.
+    - Adds functions to manipulate technology effects.
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.1
 Date: 2025-09-19
